<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.pet.PetAddActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pet_img_add_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/pet_add_btn"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pet_img_add_btn"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        />
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/tv_birth_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:text="@string/birth_year"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        />
    <NumberPicker
        android:id="@+id/et_birth_year"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_birth_year"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:inputType="none"
        android:background="@drawable/border_table"
        />
    <TextView
        android:id="@+id/tv_meet_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_birth_year"
        android:text="@string/meet_date"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        />
    <EditText
        android:id="@+id/et_meet_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_meet_date"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="2dp"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none"
        />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_meet_date"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        />
    <EditText
        android:id="@+id/et_weight"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="2dp"
        android:inputType="numberDecimal"
        />

    <Button
        android:id="@+id/add_pet_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/add"
        android:background="@drawable/btn_default"
        />


</androidx.constraintlayout.widget.ConstraintLayout>