<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.write.WVeterinaryDiaryActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="25sp"
                android:text="@string/veterinary_report"
                android:gravity="center"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/date"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/et_date"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150dp"
                    android:layout_marginHorizontal="20dp"
                    android:enabled="false"
                    android:textColor="@color/black"
                    />
                <androidx.constraintlayout.utils.widget.ImageFilterButton
                    android:id="@+id/btn_calendar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_calendar"
                    app:layout_constraintLeft_toRightOf="@+id/et_date"
                    app:layout_constraintBottom_toBottomOf="@+id/et_date"
                    android:scaleType="centerInside"
                    android:layout_marginVertical="10dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_veterinary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/veterinary_name"
                app:layout_constraintTop_toBottomOf="@id/et_date"
                />
            <EditText
                android:id="@+id/et_veterinary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_veterinary"
                android:minWidth="300dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                />

            <TextView
                android:id="@+id/tv_vet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="진료자"
                app:layout_constraintTop_toBottomOf="@id/et_veterinary"
                />
            <EditText
                android:id="@+id/et_vet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_vet_name"
                android:minWidth="150dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20dp"
                />
            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/weight"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/et_wieght"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:inputType="numberDecimal"
                    android:layout_marginStart="20dp"
                    />
                <TextView
                    android:id="@+id/tv_kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_medical_records"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/treat_contents"
                app:layout_constraintTop_toBottomOf="@id/et_wieght"
                />
            <LinearLayout
                android:id="@+id/records_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/et_medical_records"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:inputType="textMultiLine"
                    android:textSize="13sp"
                    android:width="330dp"
                    android:hint="@string/treat_result_contents"
                    />
                <androidx.constraintlayout.utils.widget.ImageFilterButton
                    android:id="@+id/btn_add_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_picture"
                    android:layout_marginHorizontal="5dp"
                    android:contentDescription="@string/add_photos"
                    />
            </LinearLayout>
            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/vet_flex_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxLine="1"
                app:justifyContent="flex_start"
                app:layout_constraintBottom_toTopOf="@+id/records_layout"
                app:layout_constraintTop_toBottomOf="@+id/tv_medicine"
                app:flexWrap="wrap"
                android:paddingHorizontal="20dp"
                >
            </com.google.android.flexbox.FlexboxLayout>

            <TextView
                android:id="@+id/tv_medicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/prescription_drug"
                app:layout_constraintTop_toBottomOf="@id/et_medical_records"
                />
            <LinearLayout
                android:id="@+id/grp_medicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_medicine"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <EditText
                        android:id="@+id/m_nm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="170dp"
                        android:textSize="13sp"
                        android:hint="@string/drug_name"
                        />
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="50dp"
                        android:textSize="13sp"
                        android:hint="@string/volume"
                        android:inputType="numberDecimal"
                        />
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        />
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/btn_add_medicine"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/pet_add_btn"
                        />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_etc_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="기타 메모"
                app:layout_constraintTop_toBottomOf="@id/grp_medicine"
                />
            <EditText
                android:id="@+id/et_etc_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_etc_memo"
                android:inputType="textMultiLine"
                />
            <Button
                android:id="@+id/btn_veterinary_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="right"
                android:layout_marginHorizontal="30dp"
                />
        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>